<resources>
    <string name="app_name">MediBox</string>
    <string name="medibox">MediBox</string>
    <string name="user">Usuario</string>
    <string name="login">Iniciar sesión</string>
    <string name="email_or_phone_number">Email o número de teléfono</string>
    <string name="password">Contraseña</string>
    <string name="forget_my_password">Olvidé mi contraseña</string>
    <string name="not_account">¿No tienes una cuenta?</string>
    <string name="signup">Registrarse</string>
    <string name="upcoming">Pendiente</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="create">Crear</string>
    <string name="instruction_tittle">¿Tu pastillero no tiene conexión Wi-Fi?</string>
    <string name="instruction_1"><![CDATA[1. Busca "RED_PASTILLERO" en tus redes Wi-Fi disponibles]]></string>
    <string name="instruction_2">2. Ingresa a tu navegador y dirígete a 198.168.1.32.</string>
    <string name="instruction_3">3. Ingresa las credenciales de una red Wi-Fi.</string>
    <string name="delete">Eliminar</string>
    <string name="few_pills">Pocas pastillas</string>
    <string name="accept">Aceptar</string>
    <string name="low_medication_on_pillbox">Poca medicación en el pastillero</string>
    <string name="customize_alarm">Personalizar alarma</string>
    <string name="cancel">Cancelar</string>
    <string name="save">Guardar</string>
    <string name="profile">Perfil</string>
    <string name="name_two_points">Nombre:</string>
    <string name="name">Nombre</string>
    <string name="lastname_two_points">Apellido:</string>
    <string name="lastname">Apellido</string>
    <string name="email_two_points">Email:</string>
    <string name="email">Email</string>
    <string name="cellphone">Número de teléfono</string>
    <string name="next">Siguiente</string>
    <string name="edit">Editar</string>
    <string name="reminder">Recordatorio</string>
    <string name="medication_name_two_points">Nombre del medicamento:</string>
    <string name="no_medication_on_pillbox">No hay medicamentos en el pastillero</string>
    <string name="there_are_no_more_pills">No hay más pastillas</string>
    <string name="time_for_medication">Hora de la medicina</string>
    <string name="forgotten">Olvidado</string>
    <string name="medicine">Medicina</string>
    <string name="medication_history">Historial de medicación</string>
    <string name="medication_progress">Progreso de la medicación</string>
    <string name="new_">Nuevo</string>
    <string name="lapse_of_time">Lapso de tiempo</string>
    <string name="for_">Para</string>
    <string name="number_of_pills">Número de pastillas</string>
    <string name="should_it_be_taken_with_food">¿Debe ser tomado con comida?</string>
    <string name="update">Actualizar</string>
    <string name="medication_data">Datos de la medicación:</string>
    <string name="frequency">Frecuencia</string>
    <string name="per_two_points">por:</string>
    <string name="should_be_taken_two_points">Debería ser tomada:</string>
    <string name="times">veces</string>
    <string name="interval">Intervalo</string>
    <string name="every">Cada</string>
    <string name="duration_of_medication">Duración de la medicación</string>
    <string name="yes">Sí</string>
    <string name="no">No</string>
    <string name="it_doesn_t_matter">No importa</string>
    <string name="upload_photo">Subir foto</string>
    <string name="take_a_photo">Tomar foto</string>
    <string name="pill_photo_optional">Foto de pastilla (opcional)</string>
    <string name="new_user_registration">Registro de nuevo usuario</string>
    <string name="nice_register">¡Registro genial!</string>
    <string name="personal_information">Información personal</string>
    <string name="repeat_password">Repetir contraseña</string>
    <string name="what_do_you_want_to_do">¿Qué deseas realizar?</string>
    <string name="menu">Menú</string>
    <string name="create_reminder">Crear recordatorio</string>
    <string name="your_reminders">Tus recordatorios</string>
    <string name="completed">Completo</string>
    <string name="sign_out">Cerrar sesión</string>
    <string name="touch_me">¡Tócame!</string>
    <string name="need_microphone_permission">Necesitas proveer el permiso de micrófono para activar comandos de voz.</string>
    <string name="listening_three_points">Escuchando…</string>
    <string name="voice_edit_profile">editar perfil</string>
    <string name="voice_create_reminder">crear recordatorio</string>
    <string name="voice_change_alarm">cambiar alarma</string>
    <string name="voice_log_out">cerrar sesión</string>
    <string name="voice_exit">salir</string>
    <string name="voice_close">cerrar</string>
    <string name="voice_pillbox">pastillero</string>
    <string name="could_not_recognize_voice_command">No se pudo reconocer el comando %1$s</string>
    <string name="user_updated_successfully">El usuario se actualizó exitosamente.</string>
    <string name="error_while_updating_user">Ocurrió un error al actualizar el usuario.</string>
    <string name="admin_account_denied">Hey, esta es una cuenta administrativa. No puedes iniciar sesión con esta cuenta</string>
    <string name="error_while_logging_in">Error al iniciar sesión</string>
    <string name="an_error_occurred_while_registration">Ha ocurrido un error durante el registro del usuario.</string>
    <string name="validation_errors_occurred">Han ocurrido errores de validación.</string>
    <string name="error_while_getting_medicines">Error al obtener medicinas.</string>
    <string name="please_select_a_medicine">Por favor, selecciona una medicina.</string>
    <string name="you_need_permission_to_select_image">Necesitas autorizar permisos para seleccionar las imágenes.</string>
    <string name="reminder_deleted_successfully">El recordatorio fue eliminado exitosamente.</string>
    <string name="error_while_deleting_reminder">Ha ocurrido un error al eliminar el recordatorio.</string>
    <string name="taken">Tomada</string>
    <string name="percentage_completed">% completado</string>
    <string name="cancelled">Cancelado</string>
    <string name="reminder_updated_successfully">Recordatorio actualizado correctamente</string>
    <string name="error_while_creating_interval_of_reminder">Ocurrió un error al crear intervalo de recordatorio. Destruyendo el recordatorio incompleto...</string>
    <string name="error_while_creating_frequency_of_reminder">Ocurrió un error al crear frecuencia de recordatorio. Destruyendo el recordatorio incompleto...</string>
    <string name="error_while_updating_reminder">Ha ocurrido un error al actualizar el recordatorio.</string>
    <string name="select_reminder_start_time">Selecciona la hora del recordatorio</string>
    <string name="you_need_to_indicate_the_reminder_start_time">Necesita indicar la hora de inicio del recordatorio.</string>
    <string name="postpone">Postponer</string>
    <string name="time_for_medication_notif">¡Hora de la medicina!</string>
    <string name="alarm_postponed">Alarma de medicación postpuesta.</string>
    <string name="confirm">Confirmar</string>
    <string name="reminder_created_successfully">Recordatorio creado correctamente.</string>
    <string name="error_while_creating_reminder">Error al crear recordatorio</string>
    <string name="other">Otro</string>
    <string name="you_need_permission_to_take_photos">Necesitas otorgar permiso para tomar fotos.</string>
    <string name="medicine_name">Nombre de medicina</string>
    <string name="write_medicine_name">Escribe el nombre de la medicina</string>
    <string name="local_reminder_created">Recordatorio local creado correctamente.</string>
    <string name="with_food">Con comida</string>
    <string name="without_food">Sin comida</string>
    <string name="change_id">Cambiar ID</string>
    <string name="pillbox_id">ID de pastillero</string>
    <string name="select_pillbox_id">Elige el id de tu pastillero</string>
    <string name="pillbox_id_changed_successfully">ID de pastillero cambiado correctamente.</string>
    <string name="introduce_valid_natural_number">Introduce un número natural válido</string>
    <string name="pillbox_id_saved_correctly">Id de pastillero guardado correctamente</string>
    <string name="invalid_id">ID inválido</string>
    <string name="error_occurred_in_pillbox_server">Ha ocurrido un error en el servidor de pastilleros.</string>
    <string name="empty_pillbox_service">Servicio de pastillero vacío</string>
    <string name="service_running_three_points">El servicio está corriendo…</string>
    <string name="oh_no_your_pillbox_is_empty">¡Oh no! Tu pastillero está vacío</string>
    <string name="please_refill_your_medications">Por favor rellena tus medicinas.</string>
    <string name="your_pillbox_is_near_to_be_empty">Tu pastillero está casi vacío</string>
    <string name="don_t_forget_to_refill_your_medications">No te olvides de rellenar tus medicinas.</string>
    <string name="reminder_service">Servicio de recordatorios</string>
    <string name="permanent_login_service">Servicio de logueo permanente</string>
    <string name="days">Días</string>
    <string name="day">Día</string>
    <string name="weeks">Semanas</string>
    <string name="hours">Horas</string>
    <string name="error_while_getting_completed_alarms">Ha ocurrido un error al obtener las alarmas completadas.</string>
    <string name="error_while_getting_missed_alarms">Ha ocurrido un error al obtener las alarmas olvidadas.</string>
    <string name="error_while_saving_the_alarm_in_cloud">Ha ocurrido un error al guardar la alarma en la nube.</string>
    <string name="home">Inicio</string>
    <string name="dashboard">Dashboard</string>
    <string name="voice">Voz</string>
    <string name="calendar">Calendario</string>
    <string name="january">Enero</string>
    <string name="february">Febrero</string>
    <string name="march">Marzo</string>
    <string name="april">Abril</string>
    <string name="may">Mayo</string>
    <string name="june">Junio</string>
    <string name="july">Julio</string>
    <string name="august">Agosto</string>
    <string name="september">Setiembre</string>
    <string name="october">Octubre</string>
    <string name="november">Noviembre</string>
    <string name="december">Diciembre</string>
    <string name="password_not_match">Las contraseñas no coinciden.</string>
    <string name="name_and_lastname_only_have_letters">Tu nombre y apellido solo deben contener letras y/o espacios.</string>
    <string name="empty_fields">Hay campos vacíos.</string>
    <string name="invalid_email_format">Formato de email inválido</string>
    <string name="invalid_phone_number">Número inválido. Se debe componer de 9 dígitos.</string>
    <string name="alarm_info">Intervalos:\nCada 6 horas: 8am, 2pm y 8pm\nCada 8 horas: 7am, 3pm y 11pm\nCada 12 horas: Usted elige la hora\n\nFrecuencias:\nUna vez por día: Usted elige la hora\nDos veces por día: 8am y 8pm</string>
    <string name="how_alarms_are_programmed">¿Cómo se programan las alarmas?</string>
    <string name="voice_commands">Comandos de voz</string>
    <string name="which_are_available_voice_commands">¿Cuáles son los comandos de voz disponibles?</string>
    <string name="select_one_alarm">Selecciona una alarma.</string>
    <string name="changed_alarm_successfully">Alarma cambiada correctamente.</string>
</resources>
