<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android">
  <androidx.constraintlayout.widget.ConstraintLayout
      android:id="@+id/main"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      tools:context=".identitymanagement.controller.activities.EditProfileActivity">



    <TextView
        android:id="@+id/textView17"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/medibox"
        android:textColor="#5D46EF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="80dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/profile"
        android:textSize="26sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="220dp"
        android:layout_height="194dp"
        android:layout_marginStart="88dp"
        android:layout_marginTop="128dp"
        android:layout_marginEnd="103dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/profile_mockup" />

    <TextView
        android:id="@+id/tvEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="300dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/name_two_points"
        android:textColor="#5E5E5E"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/etEditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/name"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditName" />

    <TextView
        android:id="@+id/tvEditLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/lastname_two_points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditName" />

    <EditText
        android:id="@+id/etEditLastname"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/lastname"
        android:inputType="text"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditLastname" />

    <TextView
        android:id="@+id/tvEditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/email_two_points"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditLastname" />

    <EditText
        android:id="@+id/etEditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditEmail" />

    <TextView
        android:id="@+id/tvEditPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/password"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditEmail" />

    <EditText
        android:id="@+id/etEditPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/password"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditPassword" />

    <TextView
        android:id="@+id/tvEditCellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/cellphone"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditPassword" />

    <EditText
        android:id="@+id/etEditCellphone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="36dp"
        android:layout_marginTop="5dp"
        android:ems="10"
        android:fontFamily="@font/palanquin_dark"
        android:hint="@string/cellphone"
        android:inputType="phone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvEditCellphone" />

    <Button
        android:id="@+id/btnSaveEdit"
        android:layout_width="134dp"
        android:layout_height="61dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="8dp"
        android:backgroundTint="#7E69F5"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/save"
        android:textSize="20sp"
        app:cornerRadius="13dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditCellphone" />

    <Button
        android:id="@+id/btnCancelEdit"
        android:layout_width="134dp"
        android:layout_height="61dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="50dp"
        android:backgroundTint="#E86868"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/cancel"
        android:textSize="20sp"
        app:cornerRadius="13dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etEditCellphone" />
  </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>

