<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cvReminderDialog"
    android:layout_width="300dp"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvDoYouWant"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:fontFamily="@font/palanquin_dark"
            android:text="@string/what_do_you_want_to_do"
            android:textSize="24sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btnReminderEdit"
            android:layout_width="134dp"
            android:layout_height="61dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#7E69F5"
            android:fontFamily="@font/palanquin_dark"
            android:text="@string/edit"
            android:textSize="20sp"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDoYouWant" />

        <Button
            android:id="@+id/btnReminderDelete"
            android:layout_width="134dp"
            android:layout_height="61dp"
            android:layout_marginTop="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="20dp"
            android:backgroundTint="#E86868"
            android:fontFamily="@font/palanquin_dark"
            android:text="@string/delete"
            android:textSize="20sp"
            app:cornerRadius="13dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvDoYouWant" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>