<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".pillboxmanagement.controller.activities.AlmostEmptyAlarmActivity">

    <TextView
        android:id="@+id/textView29"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="16dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/medibox"
        android:textColor="#5D46EF"
        android:textSize="36sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView30"
        android:layout_width="366dp"
        android:layout_height="120dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="88dp"
        android:fontFamily="@font/palanquin_dark"
        android:text="@string/low_medication_on_pillbox"
        android:textAlignment="center"
        android:textSize="34sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.cardview.widget.CardView
        android:layout_width="339dp"
        android:layout_height="422dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="24dp"
        app:cardBackgroundColor="#F1F1F1"
        app:cardCornerRadius="20dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView30" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="162dp"
                android:layout_height="132dp"
                android:layout_marginTop="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/alert_icon" />

            <TextView
                android:id="@+id/textView31"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:fontFamily="@font/palanquin_dark"
                android:text="@string/few_pills"
                android:textColor="#020A51"
                android:textSize="34sp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8" />

            <Button
                android:id="@+id/btnAcceptAlmostEmpty"
                android:layout_width="152dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="18dp"
                android:backgroundTint="#7E69F5"
                android:fontFamily="@font/palanquin_dark"
                android:text="@string/accept"
                android:textSize="24sp"
                app:cornerRadius="13dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView31" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>